infrastructure/resources/network/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster
  namespace: cilium-system
spec:
  addresses:
    - type: IPAddress
      value: "${lb_ip_pool_cidr_ip}"
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: infra-https
      protocol: HTTPS
      port: 443
      hostname: "*.infra.${cluster_domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: cluster-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: tenant-https
      protocol: HTTPS
      port: 443
      hostname: "*.tenant.${cluster_domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: cluster-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: capsule.clastix.io/tenant
                operator: Exists
